Movimiento de personaje
Todavía tiene un bug con lo de la p.